Hiding the Jump to issue panel displayed in IssueTracker - seems to be useless just wasting space...
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1637 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/www/theme/css/theme.css
+++ b/www/theme/css/theme.css
@@ -36,6 +36,10 @@ div#apphead {
     display: none;
 }
 
+div#topmodule {
+    display: none;
+}
+
 p.tasknav {
     display: none;
 }
